Exception completed and Auth Flow started